objects/GDPRTaskSubProcessor__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>GDPR-TaskSubProcessor</label>
</CustomObject>